# echo-mate

./: .gitignore  log.txt
Demo/: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
Demo/DeskBot_demo/: CMakeLists.txt
Demo/DeskBot_demo/common/event_manager/: event_manager.c
Demo/DeskBot_demo/common/sys_manager/: sys_manager.c
Demo/DeskBot_demo/conf/: dev_conf.h
Demo/DeskBot_demo/gui_app/: CMakeLists.txt  ui.c
Demo/DeskBot_demo/gui_app/common/page_manager/: lv_lib_pm.c  lv_lib_pm.h
Demo/DeskBot_demo/gui_app/pages/ui_CalculatorPage/: app_CalculatorPage.c
Demo/DeskBot_demo/gui_app/pages/ui_CalendarPage/: ui_CalendarPage.c
Demo/DeskBot_demo/gui_app/pages/ui_ChatBotPage/: app_ChatBotPage.c  ui_ChatBotPage.c
Demo/DeskBot_demo/gui_app/pages/ui_DrawPage/: ui_DrawPage.c
Demo/DeskBot_demo/gui_app/pages/ui_Game2048Page/: ui_Game2048Page.c
Demo/DeskBot_demo/gui_app/pages/ui_GameMuyuPage/: ui_GameMuyuPage.c
Demo/DeskBot_demo/gui_app/pages/ui_SettingPage/: ui_SettingPage.c
Demo/DeskBot_demo/gui_app/pages/ui_WeatherPage/: ui_WeatherPage.c
Demo/DeskBot_demo/gui_app/pages/ui_YOLOPage/: ui_YOLOPage.c
Demo/DeskBot_demo/lvgl/src/widgets/calendar/: lv_calendar_header_dropdown.c
Demo/DeskBot_demo/lvgl/tests/: FindLibDRM.cmake
Demo/yolov5_demo/: README.md
Demo/yolov5_demo/cpp/: AIcamera_c_interface.cc  AIcamera_c_interface.h  CMakeLists.txt  main.cc  main2.cc
